#106 closed bug (fixed)
BFS error when installing several times with Installer
Reported by: | korli | Owned by: | axeld |
---|---|---|---|
Priority: | high | Milestone: | R1 |
Component: | System/Kernel | Version: | |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
CachedNode::Allocate() returns B_ERROR on a testcase:
- Run Installer with two twin haiku hd images in QEmu.
- Install boot partition on the other, several times if needed.
- An alert should appears telling "Error copying ??? ??? : General system
error".
- The serial log displays "bfs: Allocate:330: General system error", which is
the last line in CachedNode::Allocate().
- The good news is Haiku doesn't crash at all, it just runs normally after this
error.
ps tells memory is used 42% QEmu uses 282Mo when configured for a 256Mo VM.
Change History (4)
comment:1 by , 19 years ago
comment:2 by , 19 years ago
Resolution: | → fixed |
---|
comment:4 by , 19 years ago
Status: | new → closed |
---|
Note:
See TracTickets
for help on using tickets.
identified an error code path : =>bfs_create_symlink(void *_ns, void *_directory, const char *name, const char *path, int mode):841 =>Inode::Create(Transaction &transaction, Inode *parent, const char *name, int32 mode,
=>Index::InsertName(Transaction &transaction, const char *name, Inode *inode) =>Index::UpdateName(Transaction &transaction, const char *oldName, const char *newName, Inode *inode) =>Index::Update(Transaction &transaction, const char *name, int32 type, const uint8 *oldKey,
=>BPlusTree::Insert(Transaction &transaction, const uint8 *key, uint16 keyLength, off_t value):1237 =>BPlusTree::InsertDuplicate(Transaction &transaction, CachedNode &cached,
=>CachedNode::Allocate(Transaction &transaction, bplustree_node _node, off_t *_offset):330
I also commit changes to trace this error code path